# stsnet

./: .gitignore  README.md  README_v01.md  pyproject.toml
checkpoints/: stsnet_base.pt
config/: default.yaml
data/: annotations2.json  signer_map.csv  sts_handformer.txt  test_list2.json
docs/: make_architecture_diagram.py
scripts/: align.py  evaluate.py  extract_pose.py  generate_pseudo_signing.py  make_seed_alignment.py  mine_sslc.py  predict.py  recipe.py  train.py  train_clip.py
stsnet/: __init__.py  clip_classifier.py  encoder.py  inference.py  model.py  train_utils.py  viterbi.py
stsnet/data/: __init__.py  align_dataset.py  contact.py  description.py  multihead.py  pose_io.py  sslc_mined.py  ssll_clip.py
tests/: test_viterbi.py
