[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stsnet"
version = "0.2.0"
description = "STS-Net: clip-level sign language phonology model"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "pose-format",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["stsnet*", "scripts*"]

[project.scripts]
stsnet-train       = "scripts.train:main"
stsnet-train-clip  = "scripts.train_clip:main"
stsnet-mine        = "scripts.mine_sslc:main"
stsnet-align       = "scripts.align:main"
stsnet-evaluate    = "scripts.evaluate:main"
stsnet-recipe      = "scripts.recipe:main"
